--- a/helm-charts/omv-nginx-proxy/values.yaml
+++ b/helm-charts/omv-nginx-proxy/values.yaml
@@ -535,6 +535,7 @@ cloneStaticSiteFromGit:
 ##
 # serverBlock: ""
 serverBlock: |-
+  ## HTTP Server Configuration
   server {
     listen 0.0.0.0:8080;
     root /app;
@@ -543,6 +544,13 @@ serverBlock: |-
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
+    }
+  }
+  ## TCP Stream Configuration
+  stream {
+    server {
+      listen 0.0.0.0:445;
+      proxy_pass 10.0.4.30:445;
     }
   }
 ## @param existingServerBlockConfigmap ConfigMap with custom server block to be added to NGINX configuration
